	- Fixed crash when killing a monkey.
	- Fixed crash when trying to request the item room of an invalid item.
	- Fixed crash when player has a bad animation.
	- Qwop when respawning fixed.
	- Removed the sprint limitation (now you can sprint after stopping if you still have sprint energy, like TR4 and TR5).
	- Fixed the ghetto registry edit bypass to connect to hamachi servers. Now you only need to connect to the hamachi network and you can connect by selecting the server in the launcher.
	- AI is now properly synced across players and they won't die mid air and cause weird animation bugs or AI stuck situations (to be heavily tested).
	
- v1.1.5 (06-11-21):
	- Fixed bug when trying to fly while in vehicle, flying in vehicles are blocked so there won't be any more bugs.
	- Fixed player explosion not being synced properly with players.
	- Fixed a crash related to lara's hair.
	- Fixed bleeding windows when destroying them.
	- Implemented TR4/TR5 sprint to crouch (this feature is available in all tr3 original and custom levels since the animation is in all .tr2 files).
	- Implemented setMinecartTurnModifier to modify the block length of the minecart turn angle, for example you can set it to 1 and it will take 4 blocks instead of 3 to complete a turn.
	- Added new several client and server scripting functions:
		· setCameraPosition.
		· getCameraRoom.
		· setCameraRoom.
		· getCameraType.
		· setCameraType.
		· getCameraItem.
		· setCameraItem.
		· getCameraTarget.
		· setCameraTarget.
		· getItemFromEntity.
		· getItemsTable (client and server).
		· asEntity (client and server).
		· isEntity (client and server).
		· destroyEntity (added in server too).
		· killCreature.
		· getItemGravityStatus.
		· getItemGoalAnim.
		· getItemCurrentAnim.
		· getItemAnimID.
		· getItemAnimFrame.
		· getPlayerHeadRotation.
		· getPlayerTorsoRotation.
		· getPlayerArmFrameNumber.
		· setMinecartTurnModifier.
	
	
	
	
	
	
	
	
	
	
	
	
	
	