@@ -3,3 +3,5 @@
 bool load_level();
 bool S_LoadGameFlow(const char* filename);
 void unload_level();
+
+int16_t load_animation(const char* filename);
